Enhance GitHub workflows and CloudFormation templates for improved deployment flexibility
- Added support for configurable static assets S3 bucket name in the build and deploy workflows.
- Introduced app access mode configuration to allow public, public-http, and internal access modes.
- Updated CloudFormation templates to handle namespace for S3 bucket naming, ensuring globally unique bucket names.
- Enhanced domain and DNS configurations to be conditional based on access mode, improving deployment adaptability.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,11 @@ on:
         required: false
         type: string
         default: ''
+      static_assets_bucket_name:
+        required: false
+        type: string
+        description: 'S3 bucket name for static assets (from deploy-s3 outputs). If not provided, uses legacy naming pattern.'
+        default: ''
       publish_to_dockerhub:
         required: false
         type: boolean
@@ -134,7 +139,8 @@ jobs:
 
       - name: Sync static assets to S3
         env:
-          S3_BUCKET: roboledger-app-${{ inputs.environment }}-static-assets
+          # Use bucket name from deploy-s3 outputs if provided, otherwise use legacy naming
+          S3_BUCKET: ${{ inputs.static_assets_bucket_name || format('roboledger-app-{0}-static-assets', inputs.environment) }}
         run: |
           # Check if S3 bucket exists
           if aws s3api head-bucket --bucket "$S3_BUCKET" 2>/dev/null; then
