--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -27,8 +27,29 @@ on:
         description: 'CloudFormation stack name'
         required: true
         type: string
-      s3_stack_name:
-        description: 'Name of the S3 stack to import bucket resources from'
+
+      # Access Mode Configuration
+      app_access_mode:
+        description: |
+          App access mode:
+          - public: CloudFront + custom domain + HTTPS (requires domain)
+          - public-http: CloudFront with AWS DNS, no custom domain needed
+          - internal: Internal ALB only, access via bastion tunnel
+        required: false
+        type: string
+        default: 'public'
+
+      # S3 Bucket Configuration (passed from deploy-s3 workflow outputs)
+      static_assets_bucket_name:
+        description: 'S3 bucket name for static assets'
+        required: true
+        type: string
+      static_assets_bucket_arn:
+        description: 'S3 bucket ARN for static assets'
+        required: true
+        type: string
+      static_assets_bucket_domain:
+        description: 'S3 bucket regional domain name for static assets'
         required: true
         type: string
 
@@ -47,12 +68,12 @@ on:
         description: 'CPU units for ECS task (256 = 0.25 vCPU)'
         required: false
         type: string
-        default: '512'
+        default: '256'
       memory:
         description: 'Memory in MiB for ECS task'
         required: false
         type: string
-        default: '1024'
+        default: '512'
       fargate_weight:
         description: 'Weight for FARGATE capacity provider (On-Demand instances)'
         required: false
@@ -96,15 +117,17 @@ on:
         type: string
         default: '25'
 
-      # Domain & DNS Configuration
+      # Domain & DNS Configuration (required only when app_access_mode=public)
       domain_name:
-        description: 'Full domain name for the application (e.g., roboledger.ai)'
-        required: true
+        description: 'Full domain name for the application (e.g., roboledger.ai). Required for public mode.'
+        required: false
         type: string
+        default: ''
       domain_name_root:
-        description: 'Root domain name for Route 53 hosted zone'
-        required: true
+        description: 'Root domain name for Route 53 hosted zone. Required for public mode.'
+        required: false
         type: string
+        default: ''
 
       # SNS Configuration
       notification_email:
@@ -207,15 +230,22 @@ jobs:
       - name: Deploy RoboLedger CloudFormation Stack
         id: deploy-stack
         run: |
-          # Look up the hosted zone ID for the root domain
-          HOSTED_ZONE_ID=$(aws route53 list-hosted-zones | jq -r ".HostedZones[] | select(.Name==\"${{ inputs.domain_name_root }}.\") | .Id" | cut -d'/' -f3)
-
-          if [ -z "$HOSTED_ZONE_ID" ]; then
-            echo "ERROR: No hosted zone found for domain ${{ inputs.domain_name_root }}"
-            exit 1
+          # Look up hosted zone ID only for public mode (requires custom domain)
+          HOSTED_ZONE_ID=""
+          if [ "${{ inputs.app_access_mode }}" = "public" ]; then
+            if [ -z "${{ inputs.domain_name_root }}" ]; then
+              echo "ERROR: domain_name_root is required for public access mode"
+              exit 1
+            fi
+            HOSTED_ZONE_ID=$(aws route53 list-hosted-zones | jq -r ".HostedZones[] | select(.Name==\"${{ inputs.domain_name_root }}.\") | .Id" | cut -d'/' -f3)
+            if [ -z "$HOSTED_ZONE_ID" ]; then
+              echo "ERROR: No hosted zone found for domain ${{ inputs.domain_name_root }}"
+              exit 1
+            fi
+            echo "Found hosted zone ID: $HOSTED_ZONE_ID for domain ${{ inputs.domain_name_root }}"
+          else
+            echo "Skipping hosted zone lookup for ${{ inputs.app_access_mode }} mode"
           fi
-
-          echo "Found hosted zone ID: $HOSTED_ZONE_ID for domain ${{ inputs.domain_name_root }}"
 
           if aws cloudformation describe-stacks --stack-name ${{ inputs.stack_name }} 2>&1 | grep -q 'Stack with id ${{ inputs.stack_name }} does not exist'; then
             STACK_ACTION="create-stack"
@@ -227,8 +257,10 @@ jobs:
             echo "is_new_stack=false" >> $GITHUB_OUTPUT
           fi
 
+          # Base parameters (always required)
           APP_STACK_PARAMS="ParameterKey=Environment,ParameterValue=${{ inputs.environment }} \
                 ParameterKey=AWSAccountId,ParameterValue=${{ inputs.aws_account_id }} \
+                ParameterKey=AppAccessMode,ParameterValue=${{ inputs.app_access_mode }} \
                 ParameterKey=RoboLedgerSecretsArn,ParameterValue=${{ steps.get-arns.outputs.robosystems_secrets_arn }} \
                 ParameterKey=VpcId,ParameterValue=${{ steps.get-vpc-info.outputs.vpc_id }} \
                 ParameterKey=SubnetIds,ParameterValue=\"${{ steps.get-vpc-info.outputs.private_subnet_ids }}\" \
@@ -237,8 +269,9 @@ jobs:
                 ParameterKey=ECRImageTag,ParameterValue=${{ inputs.ecr_image_tag }} \
                 ParameterKey=Cpu,ParameterValue=${{ inputs.cpu }} \
                 ParameterKey=Memory,ParameterValue=${{ inputs.memory }} \
-                ParameterKey=DomainName,ParameterValue=${{ inputs.domain_name }} \
-                ParameterKey=HostedZoneId,ParameterValue=$HOSTED_ZONE_ID \
+                ParameterKey=StaticAssetsBucketName,ParameterValue=${{ inputs.static_assets_bucket_name }} \
+                ParameterKey=StaticAssetsBucketArn,ParameterValue=${{ inputs.static_assets_bucket_arn }} \
+                ParameterKey=StaticAssetsBucketDomainName,ParameterValue=${{ inputs.static_assets_bucket_domain }} \
                 ParameterKey=CapacityMin,ParameterValue=${{ inputs.capacity_min }} \
                 ParameterKey=CapacityMax,ParameterValue=${{ inputs.capacity_max }} \
                 ParameterKey=ScaleUpCPUThreshold,ParameterValue=${{ inputs.scale_up_cpu_threshold }} \
@@ -247,8 +280,14 @@ jobs:
                 ParameterKey=ScaleDownMemoryThreshold,ParameterValue=${{ inputs.scale_down_memory_threshold }} \
                 ParameterKey=FargateSpotWeight,ParameterValue=${{ inputs.fargate_spot_weight }} \
                 ParameterKey=FargateWeight,ParameterValue=${{ inputs.fargate_weight }} \
-                ParameterKey=S3StackName,ParameterValue=${{ inputs.s3_stack_name }} \
                 ParameterKey=NotificationEmail,ParameterValue=${{ inputs.notification_email }}"
+
+          # Add domain parameters only for public mode
+          if [ "${{ inputs.app_access_mode }}" = "public" ]; then
+            APP_STACK_PARAMS="$APP_STACK_PARAMS \
+                ParameterKey=DomainName,ParameterValue=${{ inputs.domain_name }} \
+                ParameterKey=HostedZoneId,ParameterValue=$HOSTED_ZONE_ID"
+          fi
 
           # Deploy or update the stack
           if [ "$STACK_ACTION" = "create-stack" ]; then
